<resources>
    <string name="app_name">android-demo</string>
    <string name="imagedes">ImageDes</string>
    <string name="btn_recyclerview_fruit">Fruit</string>
    <string name="btn_recyclerview_msg">Message</string>
    <string name="input_text_hint">Type something here</string>
    <string name="btn_send">Send</string>
    <string name="btn_left_fragment">Button</string>
    <string name="txt_right_fragment">This is right fragment</string>
    <string name="btn_fragment">fragment</string>
    <string name="another_right_fragment">This is another right fragment</string>
    <string name="btn_left_fragment_back">Back</string>
    <string name="btn_news">News</string>
    <string name="btn_broadcast">Broadcast</string>
    <string name="btn_my_broadcast">MyBroadcast</string>
    <string name="btn_local_broadcast">LocalBroadcast</string>
    <string name="lbl_account">Account</string>
    <string name="lbl_password">Password:</string>
    <string name="btn_login">Login</string>
    <string name="btn_force_offline">Send force offline broadcast</string>
    <string name="edit_type_something_here">Type something here</string>
    <string name="btn_file">file</string>
    <string name="btn_save_data">Save Data</string>
    <string name="btn_create_databse">Create Databse</string>
    <string name="btn_database">Database</string>
    <string name="btn_add_data">add data</string>
    <string name="btn_update_data">update data</string>
    <string name="btn_query_data">query data</string>
    <string name="btn_delete_data">delete data</string>
    <string name="btn_runtime_permission">RuntimePermission</string>
    <string name="btn_make_call">Make Call</string>
    <string name="btn_contacts_view">contacts view</string>
</resources>